# Attendance-Bot

./: .dockerignore  .env.example  Cargo.toml  Dockerfile  LICENSE  README.md  diesel.toml  docker-compose.yml
migrations/2025-02-10-073322_users/: up.sql
migrations/2025-02-10-073556_teams/: up.sql
migrations/2025-02-10-073942_members/: up.sql
migrations/2025-02-10-074015_member_attendance/: down.sql  up.sql
src/: main.rs  schema.rs
src/api/adapters/: http_server.rs
src/api/adapters/controllers/: attendance_controller.rs  auth_controller.rs  member_controller.rs  mod.rs  team_controller.rs
src/api/application/: attendance_service.rs  auth_service.rs  member_service.rs  mod.rs  team_service.rs
src/api/domain/: dto.rs  mod.rs  model.rs
src/api/infrastructure/: auth_repository.rs  mod.rs
src/bot/adapters/: discord_bot.rs  mod.rs
src/bot/adapters/handler/: attendance.rs  auth.rs  members.rs  mod.rs  teams.rs
src/bot/application/services/: attendance_service.rs  auth_service.rs  mod.rs  team_service.rs
src/bot/domain/: model.rs  table.rs
src/bot/infrastructure/persistence/: attendance_repository.rs  mod.rs  team_repository.rs  user_repository.rs
src/config/: constant.rs  database.rs  logger.rs  mod.rs  settings.rs
