[package]
name = "attendance-bot"
version = "0.1.0"
edition = "2021"

[dependencies]
bcrypt = "0.17.0"
chrono = "0.4.39"
diesel = { version = "2.2.7",  features = ["r2d2", "postgres", "chrono"] }
dotenvy = "0.15.7"
env_logger = "0.11.6"
jsonwebtoken = "9.3.1"
log = "0.4.25"
serde = "1.0.217"
serenity = "0.12.4"
tokio = { version = "1.43.0", features = ["full"] }
